ARROW-10663: [C++] Fix is_in and index_in behaviour

* Reject duplicates in SetLookupOptions::value_set, because otherwise
  the indices returned by index_in would be relative to a deduplicated
  value_set.

* Honour SetLookup::skip_nulls in is_in.

* Revamp tests.